# pumpunjuksautin

./: README.md  control.md
.github/: FUNDING.yml
avr/: CMakeLists.txt  commands.tsv  version.cmake  version.template
avr/generators/: commands
avr/src/: .dir-locals.el  adc.c  adc.h  byteswap.h  clock.c  clock.h  cmd.h  cmd_functions.c  hardware_config.h  interface_ascii.c  interface_ascii.h  interface_modbus.c  interface_modbus.h  juksautin.c  juksautin.h  main.c  misc.c  misc.h  modbus_types.h  pin.h  serial.c  serial.h
avr/src/interface/: ascii.c  ascii.h  cmd.h  cmd_functions.c  modbus.c  modbus.h
avr_proto/: CMakeLists.txt
avr_proto/juksautin/: juksautin.ino
avr_proto/src/: hardware_config.h  main.c  pin.h  serial.c
docs/: modbus.md
enclosure/: README.md  din_clip_01.dxf  juksautin.scad
juksutil/: .gitignore  CMakeLists.txt  README.md
juksutil/src/: main.c  mmap.c  mmap.h  serial.c  serial.h  sync_clock.c  sync_clock.h  tz.c  tz.h
pcb/: compile  juksautin-cache.lib  juksautin.kicad_pcb  juksautin.kicad_wks  juksautin.pro  juksautin.sch
pcb-atmega/: juksautin-cache.lib  juksautin.kicad_pcb  juksautin.pro  juksautin.sch
tools/: set_time
